# validate_df

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/: contrato.py  etl.py
tests/: test_contrato_in.py  test_contrato_out.py
