[tool.poetry]
name = "validate-df"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.21.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
