[tool.poetry]
name = "validate-df"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.21.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
